# futhwe

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  docker-compose.yml
crates/common/: Cargo.toml
crates/common/src/config/: default.yml  mod.rs
crates/common/src/utils/: finder.rs
crates/common/tests/config/: mod.rs
crates/futhwe/: Cargo.toml  build.rs
crates/futhwe/proto/: futhwe.proto
crates/futhwe/src/: main.rs
crates/futhwe/src/grpc/: mod.rs
crates/futhwe/src/grpc/futhwe/: mod.rs
crates/futhwe/src/utils/: datastore.rs
crates/futhwe/tests/grpc/: futhwe_client.rs  mod.rs
