
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.28.2", features = ["full"] }
anyhow = "1.0.48"
chrono = "0.4.31"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "time",
    "env-filter",
] }
