[package]
name = "futhwe"
version = "0.1.0"
edition.workspace = true

[dependencies]
ityfuzz = { path = "../ityfuzz" }
common = { path = "../common" }
prost = "0.12.3"
tonic = "0.11.0"
tonic-health = "0.11.0"
tower = "0.4.12"
bytes = "1"
h2 = "0.4.3"
zip = "0.6.6"
prost-types = "0.12.3"
base64 = "0.22.0"
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = "0.11.0"
